tests/compile-fail/constant-panic.to
const Invalid: Int8 = 127i8 + 1i8
